[ADD] edit functionality [FIX] dialog react behind scene issue

--- a/watchtower/src/index.css
+++ b/watchtower/src/index.css
@@ -10,7 +10,6 @@
 
   --color-primary-hover: hsla(203, 70%, 40%, 1);
   --color-primary: hsla(203, 70%, 58%, 1);
-  --color-primary-fade: hsla(203 70%, 95%, 1);
 
   --color-secondary-hover: hsla(239, 55%, 59%, 1);
   --color-secondary: hsla(239, 92%, 74%, 1);
